--- a/schema/mysql/v8/temporal/versioned/v1.15/manifest.json
+++ b/schema/mysql/v8/temporal/versioned/v1.15/manifest.json
@@ -1,8 +1,8 @@
 {
   "CurrVersion": "1.15",
   "MinCompatibleVersion": "1.0",
-  "Description": "Add new attached_request_ids column",
+  "Description": "Add new column `details` to current_executions table",
   "SchemaUpdateCqlFiles": [
-    "add_current_executions_attached_request_ids.sql"
+    "add_current_executions_details.sql"
   ]
 }
