--- a/schema/sqlite/v3/temporal/versioned/v0.7/manifest.json
+++ b/schema/sqlite/v3/temporal/versioned/v0.7/manifest.json
@@ -1,8 +1,8 @@
 {
   "CurrVersion": "0.7",
   "MinCompatibleVersion": "0.1",
-  "Description": "Add new attached_request_ids column",
+  "Description": "Add new column `details` to current_executions table",
   "SchemaUpdateCqlFiles": [
-    "add_current_executions_attached_request_ids.sql"
+    "add_current_executions_details.sql"
   ]
 }
