--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -60,7 +60,6 @@ env:
   PR_BASE_COMMIT: ${{ github.event.pull_request.base.sha }}
   DOCKER_COMPOSE_FILE: ./develop/github/docker-compose.yml
   TEMPORAL_VERSION_CHECK_DISABLED: 1
-  BUILDKITE_ANALYTICS_TOKEN: ${{ secrets.BUILDKITE_ANALYTICS_TOKEN }}
 
 jobs:
   set-up-single-test:
@@ -232,8 +231,6 @@ jobs:
     strategy:
       fail-fast: false
     runs-on: ubuntu-20.04
-    env:
-      BUILDKITE_MESSAGE: '{"job": "unit-test"}'
     steps:
       - uses: actions/checkout@v4
         with:
@@ -275,6 +272,15 @@ jobs:
           annotate_only: true
           skip_annotations: true
 
+      - name: Generate code coverage
+        run: make ./.testoutput/summary.cover.out
+      - name: Upload code coverage
+        uses: coverallsapp/github-action@v2
+        with:
+          parallel: true
+          fail-on-error: false  # don't want to fail the run if coveralls has an issue
+          file: ./.testoutput/summary.cover.out
+
       - name: Upload test results
         # Can't pin to major because the action linter doesn't recognize the include-hidden-files flag.
         uses: actions/upload-artifact@v4.4.3
@@ -305,8 +311,6 @@ jobs:
     strategy:
       fail-fast: false
     runs-on: ubuntu-20.04
-    env:
-      BUILDKITE_MESSAGE: '{"job": "integration-test"}'
     steps:
       - uses: actions/checkout@v4
         with:
@@ -353,6 +357,15 @@ jobs:
           check_annotations: false
           annotate_only: true
           skip_annotations: true
+
+      - name: Generate code coverage
+        run: make ./.testoutput/summary.cover.out
+      - name: Upload code coverage
+        uses: coverallsapp/github-action@v2
+        with:
+          parallel: true
+          fail-on-error: false  # don't want to fail the run if coveralls has an issue
+          file: ./.testoutput/summary.cover.out
 
       - name: Upload test results
         # Can't pin to major because the action linter doesn't recognize the include-hidden-files flag.
@@ -431,7 +444,6 @@ jobs:
       PERSISTENCE_TYPE: ${{ matrix.persistence_type }}
       PERSISTENCE_DRIVER: ${{ matrix.persistence_driver }}
       TEST_TIMEOUT: ${{ needs.set-up-single-test.outputs.test_timeout }}
-      BUILDKITE_MESSAGE: '{"job": "functional-test", "db": "${{ matrix.persistence_driver }}"}'
     steps:
       - uses: ScribeMD/docker-cache@0.3.7
         if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
@@ -504,6 +516,15 @@ jobs:
           annotate_only: true
           skip_annotations: true
 
+      - name: Generate code coverage
+        run: make ./.testoutput/summary.cover.out
+      - name: Upload code coverage
+        uses: coverallsapp/github-action@v2
+        with:
+          parallel: true
+          fail-on-error: false  # don't want to fail the run if coveralls has an issue
+          file: ./.testoutput/summary.cover.out
+
       - name: Upload test results
         # Can't pin to major because the action linter doesn't recognize the include-hidden-files flag.
         uses: actions/upload-artifact@v4.4.3
@@ -564,7 +585,6 @@ jobs:
     env:
       PERSISTENCE_TYPE: ${{ matrix.persistence_type }}
       PERSISTENCE_DRIVER: ${{ matrix.persistence_driver }}
-      BUILDKITE_MESSAGE: '{"job": "functional-test-xdc", "db": "${{ matrix.persistence_driver }}"}'
       TEST_PARALLEL_FLAGS: ${{ matrix.parallel_flags }}
     steps:
       - uses: actions/checkout@v4
@@ -627,6 +647,15 @@ jobs:
           check_annotations: false
           annotate_only: true
           skip_annotations: true
+
+      - name: Generate code coverage
+        run: make ./.testoutput/summary.cover.out
+      - name: Upload code coverage
+        uses: coverallsapp/github-action@v2
+        with:
+          parallel: true
+          fail-on-error: false  # don't want to fail the run if coveralls has an issue
+          file: ./.testoutput/summary.cover.out
 
       - name: Upload test results
         # Can't pin to major because the action linter doesn't recognize the include-hidden-files flag.
@@ -743,6 +772,15 @@ jobs:
         timeout-minutes: 15
         run: make functional-test-ndc-coverage
 
+      - name: Generate code coverage
+        run: make ./.testoutput/summary.cover.out
+      - name: Upload code coverage
+        uses: coverallsapp/github-action@v2
+        with:
+          parallel: true
+          fail-on-error: false  # don't want to fail the run if coveralls has an issue
+          file: ./.testoutput/summary.cover.out
+
       - name: Upload test results
         # Can't pin to major because the action linter doesn't recognize the include-hidden-files flag.
         uses: actions/upload-artifact@v4.4.3
@@ -779,6 +817,11 @@ jobs:
     env:
       RESULTS: ${{ toJSON(needs.*.result) }}
     steps:
+      - name: Complete code coverage uploads
+        uses: coverallsapp/github-action@v2
+        with:
+          fail-on-error: false
+          parallel-finished: true
       - name: Check results
         run: |
           if [[ -n $(echo "$RESULTS" | jq '.[] | select (. != "success")') ]]; then
