--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -529,7 +529,7 @@ jobs:
       - name: Run functional test
         if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         timeout-minutes: ${{ fromJSON(needs.set-up-single-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
-        run: bash develop/github/monitor_test.sh make functional-test-coverage
+        run: ./develop/github/monitor_test.sh make functional-test-coverage
         env:
           TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
           TEMPORAL_TEST_OTEL_OUTPUT: ${{ github.workspace }}/.testoutput
@@ -704,7 +704,7 @@ jobs:
 
       - name: Run functional test xdc
         timeout-minutes: 35 # update this to TEST_TIMEOUT+5 if you update the Makefile
-        run: bash develop/github/monitor_test.sh make functional-test-xdc-coverage
+        run: ./develop/github/monitor_test.sh make functional-test-xdc-coverage
         env:
           TEMPORAL_TEST_OTEL_OUTPUT: ${{ github.workspace }}/.testoutput
           TEMPORAL_OTEL_DEBUG: true
@@ -874,7 +874,7 @@ jobs:
 
       - name: Run functional test ndc
         timeout-minutes: 15
-        run: bash develop/github/monitor_test.sh make functional-test-ndc-coverage
+        run: ./develop/github/monitor_test.sh make functional-test-ndc-coverage
         env:
           TEMPORAL_TEST_OTEL_OUTPUT: ${{ github.workspace }}/.testoutput
           TEMPORAL_OTEL_DEBUG: true
